src/main/kubernetes/artemis-k8s/artemis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artemis
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artemis
      version: "v1"
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: artemis
        version: "v1"
    spec:
      containers:
      - env:
        image: mmehmed/artemis
        imagePullPolicy: Always
        name: artemis-app
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        ports:
        - containerPort: 8080
          name: port
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
