src/main/kubernetes/artemis-k8s/artemis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: artemis
  namespace: default
  labels:
    app: artemis
spec:
  selector:
    app: artemis
  ports:
    - name: http
      port: 8080
